tests/health/tests__named2_test_force.toit.gold
tests/named2_test_force.toit:16:10: error: Argument mismatch for 'B.x'
No argument named '--val'
    this.x --val=499
         ^
